--- a/12-faq-collapse/style.css
+++ b/12-faq-collapse/style.css
@@ -113,7 +113,10 @@ h1 {
   display: none;
 }
 
-.faq.active .faq-toggle {
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 /* back-key */
